embedvm/tools/parser.output
State 230 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: program

    2 program: %empty
    3        | program meta_statement
    4        | program global_data
    5        | program function_def

    6 meta_statement: TOK_MEMADDR TOK_NUMBER
    7               | TOK_TRAMPOLINE TOK_NUMBER TOK_ID
    8               | TOK_SECTION TOK_NUMBER TOK_NUMBER TOK_ID

    9 array_type: TOK_ARRAY_8U
   10           | TOK_ARRAY_8S
   11           | TOK_ARRAY_16

   12 global_type: TOK_GLOBAL
   13            | TOK_GLOBAL_8U
   14            | TOK_GLOBAL_8S

   15 number: TOK_NUMBER
   16       | '+' TOK_NUMBER
   17       | '-' TOK_NUMBER

   18 array_init_data: %empty
   19                | number
   20                | array_init_data ',' number

   21 array_init: %empty
   22           | '=' '{' array_init_data '}'
   23           | '=' TOK_STRINGLIT

   24 global_var_init: %empty
   25                | '=' number

   26 maybe_extern: %empty
   27             | TOK_EXTERN TOK_NUMBER

   28 global_data: maybe_extern global_type TOK_ID global_var_init ';'
   29            | maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init ';'
   30            | maybe_extern array_type TOK_ID '[' ']' array_init ';'

   31 function_head: maybe_extern TOK_FUNCTION

   32 function_def: function_head TOK_ID '(' function_args ')' ';'
   33             | function_head TOK_ID '(' function_args ')' '{' function_vars function_body '}'

   34 function_args: %empty
   35              | TOK_ID
   36              | function_args ',' TOK_ID

   37 function_vars: %empty
   38              | function_var_list ';'

   39 function_var_list: TOK_LOCAL TOK_ID
   40                  | function_var_list ',' TOK_ID
   41                  | function_var_list ';' TOK_LOCAL TOK_ID

   42 function_body: %empty
   43              | function_body statement

   44 statement_list: %empty
   45               | statement_list statement

   46 statement: TOK_ID ':' statement
   47          | TOK_GOTO TOK_ID ';'
   48          | core_statement ';'
   49          | '{' statement_list '}'
   50          | TOK_IF '(' expression ')' statement
   51          | TOK_IF '(' expression ')' statement TOK_ELSE statement
   52          | TOK_DO loop_body TOK_WHILE '(' expression ')' ';'
   53          | TOK_WHILE '(' expression ')' loop_body
   54          | TOK_FOR '(' maybe_core_statement ';' expression ';' maybe_core_statement ')' loop_body
   55          | TOK_FOR '(' maybe_core_statement ';' ';' maybe_core_statement ')' loop_body
   56          | TOK_BREAK ';'
   57          | TOK_CONTINUE ';'
   58          | TOK_RETURN expression ';'
   59          | TOK_RETURN ';'

   60 $@1: %empty

   61 loop_body: $@1 statement

   62 combined_assign: TOK_ASSIGN_ADD
   63                | TOK_ASSIGN_SUB
   64                | TOK_ASSIGN_MUL
   65                | TOK_ASSIGN_DIV
   66                | TOK_ASSIGN_MOD
   67                | TOK_ASSIGN_SHL
   68                | TOK_ASSIGN_SHR
   69                | TOK_ASSIGN_AND
   70                | TOK_ASSIGN_OR
   71                | TOK_ASSIGN_XOR

   72 core_statement: func_expression
   73               | TOK_INC lvalue
   74               | TOK_DEC lvalue
   75               | lvalue TOK_INC
   76               | lvalue TOK_DEC
   77               | lvalue combined_assign expression
   78               | lvalue '=' expression

   79 maybe_core_statement: %empty
   80                     | core_statement

   81 ptr_type: TOK_PTR_8U
   82         | TOK_PTR_8S
   83         | TOK_PTR_16

   84 ptr_index: %empty
   85          | ',' expression

   86 lvalue: TOK_ID
   87       | TOK_ID '[' expression ']'
   88       | ptr_type '[' expression ptr_index ']'

   89 func_expression: TOK_ID '(' func_call_args ')'
   90                | TOK_USERFUNC '(' func_call_args ')'
   91                | TOK_PTR_F '[' expression ']' '(' func_call_args ')'

   92 expression: func_expression
   93           | '(' expression ')'
   94           | TOK_NUMBER
   95           | TOK_STRINGLIT
   96           | TOK_LINE
   97           | TOK_VMIP
   98           | TOK_VMSP
   99           | TOK_VMSFP
  100           | lvalue
  101           | '&' TOK_ID
  102           | '+' expression
  103           | expression '+' expression
  104           | expression '-' expression
  105           | expression '*' expression
  106           | expression '/' expression
  107           | expression '%' expression
  108           | expression TOK_SHL expression
  109           | expression TOK_SHR expression
  110           | expression '&' expression
  111           | expression '|' expression
  112           | expression '^' expression
  113           | expression TOK_LAND expression
  114           | expression TOK_LOR expression
  115           | '~' expression
  116           | '-' expression
  117           | '!' expression
  118           | expression '<' expression
  119           | expression TOK_LE expression
  120           | expression TOK_EQ expression
  121           | expression TOK_NE expression
  122           | expression TOK_GE expression
  123           | expression '>' expression
  124           | TOK_INC lvalue
  125           | TOK_DEC lvalue
  126           | lvalue TOK_INC
  127           | lvalue TOK_DEC
  128           | expression '?' expression ':' expression

  129 func_call_args: %empty
  130               | expression
  131               | func_call_args ',' expression


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 117
    '%' (37) 107
    '&' (38) 101 110
    '(' (40) 32 33 50 51 52 53 54 55 89 90 91 93
    ')' (41) 32 33 50 51 52 53 54 55 89 90 91 93
    '*' (42) 105
    '+' (43) 16 102 103
    ',' (44) 20 36 40 85 131
    '-' (45) 17 104 116
    '/' (47) 106
    ':' (58) 46 128
    ';' (59) 28 29 30 32 38 41 47 48 52 54 55 56 57 58 59
    '<' (60) 118
    '=' (61) 22 23 25 78
    '>' (62) 123
    '?' (63) 128
    '[' (91) 29 30 87 88 91
    ']' (93) 29 30 87 88 91
    '^' (94) 112
    '{' (123) 22 33 49
    '|' (124) 111
    '}' (125) 22 33 49
    '~' (126) 115
    error (256)
    TOK_NUMBER <number> (258) 6 7 8 15 16 17 27 29 94
    TOK_USERFUNC <number> (259) 90
    TOK_ID <string> (260) 7 8 28 29 30 32 33 35 36 39 40 41 46 47 86 87 89 101
    TOK_STRINGLIT <string> (261) 23 95
    TOK_IF (262) 50 51
    TOK_ELSE (263) 51
    TOK_DO (264) 52
    TOK_FOR (265) 54 55
    TOK_WHILE (266) 52 53
    TOK_BREAK (267) 56
    TOK_CONTINUE (268) 57
    TOK_GOTO (269) 47
    TOK_RETURN (270) 58 59
    TOK_FUNCTION (271) 31
    TOK_LOCAL (272) 39 41
    TOK_GLOBAL (273) 12
    TOK_GLOBAL_8U (274) 13
    TOK_GLOBAL_8S (275) 14
    TOK_ARRAY_8U (276) 9
    TOK_ARRAY_8S (277) 10
    TOK_ARRAY_16 (278) 11
    TOK_EXTERN (279) 27
    TOK_MEMADDR (280) 6
    TOK_SECTION (281) 8
    TOK_TRAMPOLINE (282) 7
    TOK_LINE (283) 96
    TOK_VMIP (284) 97
    TOK_VMSP (285) 98
    TOK_VMSFP (286) 99
    TOK_PTR_8U (287) 81
    TOK_PTR_8S (288) 82
    TOK_PTR_16 (289) 83
    TOK_PTR_F (290) 91
    TOK_LOR (291) 114
    TOK_LAND (292) 113
    TOK_EQ (293) 120
    TOK_NE (294) 121
    TOK_LE (295) 119
    TOK_GE (296) 122
    TOK_SHL (297) 108
    TOK_SHR (298) 109
    NEG (299)
    TOK_INC (300) 73 75 124 126
    TOK_DEC (301) 74 76 125 127
    TOK_ASSIGN_ADD (302) 62
    TOK_ASSIGN_SUB (303) 63
    TOK_ASSIGN_MUL (304) 64
    TOK_ASSIGN_DIV (305) 65
    TOK_ASSIGN_MOD (306) 66
    TOK_ASSIGN_SHL (307) 67
    TOK_ASSIGN_SHR (308) 68
    TOK_ASSIGN_AND (309) 69
    TOK_ASSIGN_OR (310) 70
    TOK_ASSIGN_XOR (311) 71


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    input (81)
        on left: 1
        on right: 0
    program <insn> (82)
        on left: 2 3 4 5
        on right: 1 3 4 5
    meta_statement <insn> (83)
        on left: 6 7 8
        on right: 3
    array_type <number> (84)
        on left: 9 10 11
        on right: 29 30
    global_type <number> (85)
        on left: 12 13 14
        on right: 28
    number <number> (86)
        on left: 15 16 17
        on right: 19 20 25
    array_init_data <ainit> (87)
        on left: 18 19 20
        on right: 20 22
    array_init <ainit> (88)
        on left: 21 22 23
        on right: 29 30
    global_var_init <vp> (89)
        on left: 24 25
        on right: 28
    maybe_extern <number> (90)
        on left: 26 27
        on right: 28 29 30 31
    global_data <insn> (91)
        on left: 28 29 30
        on right: 4
    function_head <number> (92)
        on left: 31
        on right: 32 33
    function_def <insn> (93)
        on left: 32 33
        on right: 5
    function_args <number> (94)
        on left: 34 35 36
        on right: 32 33 36
    function_vars <number> (95)
        on left: 37 38
        on right: 33
    function_var_list <number> (96)
        on left: 39 40 41
        on right: 38 40 41
    function_body <insn> (97)
        on left: 42 43
        on right: 33 43
    statement_list <insn> (98)
        on left: 44 45
        on right: 45 49
    statement <insn> (99)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 43 45 46 50 51 61
    loop_body <loopctx> (100)
        on left: 61
        on right: 52 53 54 55
    $@1 (101)
        on left: 60
        on right: 61
    combined_assign <number> (102)
        on left: 62 63 64 65 66 67 68 69 70 71
        on right: 77
    core_statement <insn> (103)
        on left: 72 73 74 75 76 77 78
        on right: 48 80
    maybe_core_statement <insn> (104)
        on left: 79 80
        on right: 54 55
    ptr_type <number> (105)
        on left: 81 82 83
        on right: 88
    ptr_index <insn> (106)
        on left: 84 85
        on right: 88
    lvalue <insn> (107)
        on left: 86 87 88
        on right: 73 74 75 76 77 78 100 124 125 126 127
    func_expression <insn> (108)
        on left: 89 90 91
        on right: 72 92
    expression <insn> (109)
        on left: 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
        on right: 50 51 52 53 54 58 77 78 85 87 88 91 93 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 128 130 131
    func_call_args <fc> (110)
        on left: 129 130 131
        on right: 89 90 91 131


State 0

    0 $accept: . input $end
    1 input: . program
    2 program: . %empty
    3        | . program meta_statement
    4        | . program global_data
    5        | . program function_def

    $default  reduce using rule 2 (program)

    input    go to state 1
    program  go to state 2


State 1

    0 $accept: input . $end

    $end  shift, and go to state 3


State 2

    1 input: program .  [$end]
    3 program: program . meta_statement
    4        | program . global_data
    5        | program . function_def
    6 meta_statement: . TOK_MEMADDR TOK_NUMBER
    7               | . TOK_TRAMPOLINE TOK_NUMBER TOK_ID
    8               | . TOK_SECTION TOK_NUMBER TOK_NUMBER TOK_ID
   26 maybe_extern: . %empty  [TOK_FUNCTION, TOK_GLOBAL, TOK_GLOBAL_8U, TOK_GLOBAL_8S, TOK_ARRAY_8U, TOK_ARRAY_8S, TOK_ARRAY_16]
   27             | . TOK_EXTERN TOK_NUMBER
   28 global_data: . maybe_extern global_type TOK_ID global_var_init ';'
   29            | . maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init ';'
   30            | . maybe_extern array_type TOK_ID '[' ']' array_init ';'
   31 function_head: . maybe_extern TOK_FUNCTION
   32 function_def: . function_head TOK_ID '(' function_args ')' ';'
   33             | . function_head TOK_ID '(' function_args ')' '{' function_vars function_body '}'

    TOK_EXTERN      shift, and go to state 4
    TOK_MEMADDR     shift, and go to state 5
    TOK_SECTION     shift, and go to state 6
    TOK_TRAMPOLINE  shift, and go to state 7

    $end      reduce using rule 1 (input)
    $default  reduce using rule 26 (maybe_extern)

    meta_statement  go to state 8
    maybe_extern    go to state 9
    global_data     go to state 10
    function_head   go to state 11
    function_def    go to state 12


State 3

    0 $accept: input $end .

    $default  accept


State 4

   27 maybe_extern: TOK_EXTERN . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 13


State 5

    6 meta_statement: TOK_MEMADDR . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 14


State 6

    8 meta_statement: TOK_SECTION . TOK_NUMBER TOK_NUMBER TOK_ID

    TOK_NUMBER  shift, and go to state 15


State 7

    7 meta_statement: TOK_TRAMPOLINE . TOK_NUMBER TOK_ID

    TOK_NUMBER  shift, and go to state 16


State 8

    3 program: program meta_statement .

    $default  reduce using rule 3 (program)


State 9

    9 array_type: . TOK_ARRAY_8U
   10           | . TOK_ARRAY_8S
   11           | . TOK_ARRAY_16
   12 global_type: . TOK_GLOBAL
   13            | . TOK_GLOBAL_8U
   14            | . TOK_GLOBAL_8S
   28 global_data: maybe_extern . global_type TOK_ID global_var_init ';'
   29            | maybe_extern . array_type TOK_ID '[' TOK_NUMBER ']' array_init ';'
   30            | maybe_extern . array_type TOK_ID '[' ']' array_init ';'
   31 function_head: maybe_extern . TOK_FUNCTION

    TOK_FUNCTION   shift, and go to state 17
    TOK_GLOBAL     shift, and go to state 18
    TOK_GLOBAL_8U  shift, and go to state 19
    TOK_GLOBAL_8S  shift, and go to state 20
    TOK_ARRAY_8U   shift, and go to state 21
    TOK_ARRAY_8S   shift, and go to state 22
    TOK_ARRAY_16   shift, and go to state 23

    array_type   go to state 24
    global_type  go to state 25


State 10

    4 program: program global_data .

    $default  reduce using rule 4 (program)


State 11

   32 function_def: function_head . TOK_ID '(' function_args ')' ';'
   33             | function_head . TOK_ID '(' function_args ')' '{' function_vars function_body '}'

    TOK_ID  shift, and go to state 26


State 12

    5 program: program function_def .

    $default  reduce using rule 5 (program)


State 13

   27 maybe_extern: TOK_EXTERN TOK_NUMBER .

    $default  reduce using rule 27 (maybe_extern)


State 14

    6 meta_statement: TOK_MEMADDR TOK_NUMBER .

    $default  reduce using rule 6 (meta_statement)


State 15

    8 meta_statement: TOK_SECTION TOK_NUMBER . TOK_NUMBER TOK_ID

    TOK_NUMBER  shift, and go to state 27


State 16

    7 meta_statement: TOK_TRAMPOLINE TOK_NUMBER . TOK_ID

    TOK_ID  shift, and go to state 28


State 17

   31 function_head: maybe_extern TOK_FUNCTION .

    $default  reduce using rule 31 (function_head)


State 18

   12 global_type: TOK_GLOBAL .

    $default  reduce using rule 12 (global_type)


State 19

   13 global_type: TOK_GLOBAL_8U .

    $default  reduce using rule 13 (global_type)


State 20

   14 global_type: TOK_GLOBAL_8S .

    $default  reduce using rule 14 (global_type)


State 21

    9 array_type: TOK_ARRAY_8U .

    $default  reduce using rule 9 (array_type)


State 22

   10 array_type: TOK_ARRAY_8S .

    $default  reduce using rule 10 (array_type)


State 23

   11 array_type: TOK_ARRAY_16 .

    $default  reduce using rule 11 (array_type)


State 24

   29 global_data: maybe_extern array_type . TOK_ID '[' TOK_NUMBER ']' array_init ';'
   30            | maybe_extern array_type . TOK_ID '[' ']' array_init ';'

    TOK_ID  shift, and go to state 29


State 25

   28 global_data: maybe_extern global_type . TOK_ID global_var_init ';'

    TOK_ID  shift, and go to state 30


State 26

   32 function_def: function_head TOK_ID . '(' function_args ')' ';'
   33             | function_head TOK_ID . '(' function_args ')' '{' function_vars function_body '}'

    '('  shift, and go to state 31


State 27

    8 meta_statement: TOK_SECTION TOK_NUMBER TOK_NUMBER . TOK_ID

    TOK_ID  shift, and go to state 32


State 28

    7 meta_statement: TOK_TRAMPOLINE TOK_NUMBER TOK_ID .

    $default  reduce using rule 7 (meta_statement)


State 29

   29 global_data: maybe_extern array_type TOK_ID . '[' TOK_NUMBER ']' array_init ';'
   30            | maybe_extern array_type TOK_ID . '[' ']' array_init ';'

    '['  shift, and go to state 33


State 30

   24 global_var_init: . %empty  [';']
   25                | . '=' number
   28 global_data: maybe_extern global_type TOK_ID . global_var_init ';'

    '='  shift, and go to state 34

    $default  reduce using rule 24 (global_var_init)

    global_var_init  go to state 35


State 31

   32 function_def: function_head TOK_ID '(' . function_args ')' ';'
   33             | function_head TOK_ID '(' . function_args ')' '{' function_vars function_body '}'
   34 function_args: . %empty  [',', ')']
   35              | . TOK_ID
   36              | . function_args ',' TOK_ID

    TOK_ID  shift, and go to state 36

    $default  reduce using rule 34 (function_args)

    function_args  go to state 37


State 32

    8 meta_statement: TOK_SECTION TOK_NUMBER TOK_NUMBER TOK_ID .

    $default  reduce using rule 8 (meta_statement)


State 33

   29 global_data: maybe_extern array_type TOK_ID '[' . TOK_NUMBER ']' array_init ';'
   30            | maybe_extern array_type TOK_ID '[' . ']' array_init ';'

    TOK_NUMBER  shift, and go to state 38
    ']'         shift, and go to state 39


State 34

   15 number: . TOK_NUMBER
   16       | . '+' TOK_NUMBER
   17       | . '-' TOK_NUMBER
   25 global_var_init: '=' . number

    TOK_NUMBER  shift, and go to state 40
    '+'         shift, and go to state 41
    '-'         shift, and go to state 42

    number  go to state 43


State 35

   28 global_data: maybe_extern global_type TOK_ID global_var_init . ';'

    ';'  shift, and go to state 44


State 36

   35 function_args: TOK_ID .

    $default  reduce using rule 35 (function_args)


State 37

   32 function_def: function_head TOK_ID '(' function_args . ')' ';'
   33             | function_head TOK_ID '(' function_args . ')' '{' function_vars function_body '}'
   36 function_args: function_args . ',' TOK_ID

    ','  shift, and go to state 45
    ')'  shift, and go to state 46


State 38

   29 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER . ']' array_init ';'

    ']'  shift, and go to state 47


State 39

   21 array_init: . %empty  [';']
   22           | . '=' '{' array_init_data '}'
   23           | . '=' TOK_STRINGLIT
   30 global_data: maybe_extern array_type TOK_ID '[' ']' . array_init ';'

    '='  shift, and go to state 48

    $default  reduce using rule 21 (array_init)

    array_init  go to state 49


State 40

   15 number: TOK_NUMBER .

    $default  reduce using rule 15 (number)


State 41

   16 number: '+' . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 50


State 42

   17 number: '-' . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 51


State 43

   25 global_var_init: '=' number .

    $default  reduce using rule 25 (global_var_init)


State 44

   28 global_data: maybe_extern global_type TOK_ID global_var_init ';' .

    $default  reduce using rule 28 (global_data)


State 45

   36 function_args: function_args ',' . TOK_ID

    TOK_ID  shift, and go to state 52


State 46

   32 function_def: function_head TOK_ID '(' function_args ')' . ';'
   33             | function_head TOK_ID '(' function_args ')' . '{' function_vars function_body '}'

    '{'  shift, and go to state 53
    ';'  shift, and go to state 54


State 47

   21 array_init: . %empty  [';']
   22           | . '=' '{' array_init_data '}'
   23           | . '=' TOK_STRINGLIT
   29 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' . array_init ';'

    '='  shift, and go to state 48

    $default  reduce using rule 21 (array_init)

    array_init  go to state 55


State 48

   22 array_init: '=' . '{' array_init_data '}'
   23           | '=' . TOK_STRINGLIT

    TOK_STRINGLIT  shift, and go to state 56
    '{'            shift, and go to state 57


State 49

   30 global_data: maybe_extern array_type TOK_ID '[' ']' array_init . ';'

    ';'  shift, and go to state 58


State 50

   16 number: '+' TOK_NUMBER .

    $default  reduce using rule 16 (number)


State 51

   17 number: '-' TOK_NUMBER .

    $default  reduce using rule 17 (number)


State 52

   36 function_args: function_args ',' TOK_ID .

    $default  reduce using rule 36 (function_args)


State 53

   33 function_def: function_head TOK_ID '(' function_args ')' '{' . function_vars function_body '}'
   37 function_vars: . %empty  [TOK_USERFUNC, TOK_ID, TOK_IF, TOK_DO, TOK_FOR, TOK_WHILE, TOK_BREAK, TOK_CONTINUE, TOK_GOTO, TOK_RETURN, TOK_PTR_8U, TOK_PTR_8S, TOK_PTR_16, TOK_PTR_F, TOK_INC, TOK_DEC, '{', '}']
   38              | . function_var_list ';'
   39 function_var_list: . TOK_LOCAL TOK_ID
   40                  | . function_var_list ',' TOK_ID
   41                  | . function_var_list ';' TOK_LOCAL TOK_ID

    TOK_LOCAL  shift, and go to state 59

    $default  reduce using rule 37 (function_vars)

    function_vars      go to state 60
    function_var_list  go to state 61


State 54

   32 function_def: function_head TOK_ID '(' function_args ')' ';' .

    $default  reduce using rule 32 (function_def)


State 55

   29 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init . ';'

    ';'  shift, and go to state 62


State 56

   23 array_init: '=' TOK_STRINGLIT .

    $default  reduce using rule 23 (array_init)


State 57

   15 number: . TOK_NUMBER
   16       | . '+' TOK_NUMBER
   17       | . '-' TOK_NUMBER
   18 array_init_data: . %empty  [',', '}']
   19                | . number
   20                | . array_init_data ',' number
   22 array_init: '=' '{' . array_init_data '}'

    TOK_NUMBER  shift, and go to state 40
    '+'         shift, and go to state 41
    '-'         shift, and go to state 42

    $default  reduce using rule 18 (array_init_data)

    number           go to state 63
    array_init_data  go to state 64


State 58

   30 global_data: maybe_extern array_type TOK_ID '[' ']' array_init ';' .

    $default  reduce using rule 30 (global_data)


State 59

   39 function_var_list: TOK_LOCAL . TOK_ID

    TOK_ID  shift, and go to state 65


State 60

   33 function_def: function_head TOK_ID '(' function_args ')' '{' function_vars . function_body '}'
   42 function_body: . %empty
   43              | . function_body statement

    $default  reduce using rule 42 (function_body)

    function_body  go to state 66


State 61

   38 function_vars: function_var_list . ';'
   40 function_var_list: function_var_list . ',' TOK_ID
   41                  | function_var_list . ';' TOK_LOCAL TOK_ID

    ','  shift, and go to state 67
    ';'  shift, and go to state 68


State 62

   29 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init ';' .

    $default  reduce using rule 29 (global_data)


State 63

   19 array_init_data: number .

    $default  reduce using rule 19 (array_init_data)


State 64

   20 array_init_data: array_init_data . ',' number
   22 array_init: '=' '{' array_init_data . '}'

    ','  shift, and go to state 69
    '}'  shift, and go to state 70


State 65

   39 function_var_list: TOK_LOCAL TOK_ID .

    $default  reduce using rule 39 (function_var_list)


State 66

   33 function_def: function_head TOK_ID '(' function_args ')' '{' function_vars function_body . '}'
   43 function_body: function_body . statement
   46 statement: . TOK_ID ':' statement
   47          | . TOK_GOTO TOK_ID ';'
   48          | . core_statement ';'
   49          | . '{' statement_list '}'
   50          | . TOK_IF '(' expression ')' statement
   51          | . TOK_IF '(' expression ')' statement TOK_ELSE statement
   52          | . TOK_DO loop_body TOK_WHILE '(' expression ')' ';'
   53          | . TOK_WHILE '(' expression ')' loop_body
   54          | . TOK_FOR '(' maybe_core_statement ';' expression ';' maybe_core_statement ')' loop_body
   55          | . TOK_FOR '(' maybe_core_statement ';' ';' maybe_core_statement ')' loop_body
   56          | . TOK_BREAK ';'
   57          | . TOK_CONTINUE ';'
   58          | . TOK_RETURN expression ';'
   59          | . TOK_RETURN ';'
   72 core_statement: . func_expression
   73               | . TOK_INC lvalue
   74               | . TOK_DEC lvalue
   75               | . lvalue TOK_INC
   76               | . lvalue TOK_DEC
   77               | . lvalue combined_assign expression
   78               | . lvalue '=' expression
   81 ptr_type: . TOK_PTR_8U
   82         | . TOK_PTR_8S
   83         | . TOK_PTR_16
   86 lvalue: . TOK_ID
   87       | . TOK_ID '[' expression ']'
   88       | . ptr_type '[' expression ptr_index ']'
   89 func_expression: . TOK_ID '(' func_call_args ')'
   90                | . TOK_USERFUNC '(' func_call_args ')'
   91                | . TOK_PTR_F '[' expression ']' '(' func_call_args ')'

    TOK_USERFUNC  shift, and go to state 71
    TOK_ID        shift, and go to state 72
    TOK_IF        shift, and go to state 73
    TOK_DO        shift, and go to state 74
    TOK_FOR       shift, and go to state 75
    TOK_WHILE     shift, and go to state 76
    TOK_BREAK     shift, and go to state 77
    TOK_CONTINUE  shift, and go to state 78
    TOK_GOTO      shift, and go to state 79
    TOK_RETURN    shift, and go to state 80
    TOK_PTR_8U    shift, and go to state 81
    TOK_PTR_8S    shift, and go to state 82
    TOK_PTR_16    shift, and go to state 83
    TOK_PTR_F     shift, and go to state 84
    TOK_INC       shift, and go to state 85
    TOK_DEC       shift, and go to state 86
    '{'           shift, and go to state 87
    '}'           shift, and go to state 88

    statement        go to state 89
    core_statement   go to state 90
    ptr_type         go to state 91
    lvalue           go to state 92
    func_expression  go to state 93


State 67

   40 function_var_list: function_var_list ',' . TOK_ID

    TOK_ID  shift, and go to state 94


State 68

   38 function_vars: function_var_list ';' .  [TOK_USERFUNC, TOK_ID, TOK_IF, TOK_DO, TOK_FOR, TOK_WHILE, TOK_BREAK, TOK_CONTINUE, TOK_GOTO, TOK_RETURN, TOK_PTR_8U, TOK_PTR_8S, TOK_PTR_16, TOK_PTR_F, TOK_INC, TOK_DEC, '{', '}']
   41 function_var_list: function_var_list ';' . TOK_LOCAL TOK_ID

    TOK_LOCAL  shift, and go to state 95

    $default  reduce using rule 38 (function_vars)


State 69

   15 number: . TOK_NUMBER
   16       | . '+' TOK_NUMBER
   17       | . '-' TOK_NUMBER
   20 array_init_data: array_init_data ',' . number

    TOK_NUMBER  shift, and go to state 40
    '+'         shift, and go to state 41
    '-'         shift, and go to state 42

    number  go to state 96


State 70

   22 array_init: '=' '{' array_init_data '}' .

    $default  reduce using rule 22 (array_init)


State 71

   90 func_expression: TOK_USERFUNC . '(' func_call_args ')'

    '('  shift, and go to state 97


State 72

   46 statement: TOK_ID . ':' statement
   86 lvalue: TOK_ID .  [TOK_INC, TOK_DEC, TOK_ASSIGN_ADD, TOK_ASSIGN_SUB, TOK_ASSIGN_MUL, TOK_ASSIGN_DIV, TOK_ASSIGN_MOD, TOK_ASSIGN_SHL, TOK_ASSIGN_SHR, TOK_ASSIGN_AND, TOK_ASSIGN_OR, TOK_ASSIGN_XOR, '=']
   87       | TOK_ID . '[' expression ']'
   89 func_expression: TOK_ID . '(' func_call_args ')'

    ':'  shift, and go to state 98
    '['  shift, and go to state 99
    '('  shift, and go to state 100

    $default  reduce using rule 86 (lvalue)


State 73

   50 statement: TOK_IF . '(' expression ')' statement
   51          | TOK_IF . '(' expression ')' statement TOK_ELSE statement

    '('  shift, and go to state 101


State 74

   52 statement: TOK_DO . loop_body TOK_WHILE '(' expression ')' ';'
   60 $@1: . %empty
   61 loop_body: . $@1 statement

    $default  reduce using rule 60 ($@1)

    loop_body  go to state 102
    $@1        go to state 103


State 75

   54 statement: TOK_FOR . '(' maybe_core_statement ';' expression ';' maybe_core_statement ')' loop_body
   55          | TOK_FOR . '(' maybe_core_statement ';' ';' maybe_core_statement ')' loop_body

    '('  shift, and go to state 104


State 76

   53 statement: TOK_WHILE . '(' expression ')' loop_body

    '('  shift, and go to state 105


State 77

   56 statement: TOK_BREAK . ';'

    ';'  shift, and go to state 106


State 78

   57 statement: TOK_CONTINUE . ';'

    ';'  shift, and go to state 107


State 79

   47 statement: TOK_GOTO . TOK_ID ';'

    TOK_ID  shift, and go to state 108


State 80

   58 statement: TOK_RETURN . expression ';'
   59          | TOK_RETURN . ';'
   81 ptr_type: . TOK_PTR_8U
   82         | . TOK_PTR_8S
   83         | . TOK_PTR_16
   86 lvalue: . TOK_ID
   87       | . TOK_ID '[' expression ']'
   88       | . ptr_type '[' expression ptr_index ']'
   89 func_expression: . TOK_ID '(' func_call_args ')'
   90                | . TOK_USERFUNC '(' func_call_args ')'
   91                | . TOK_PTR_F '[' expression ']' '(' func_call_args ')'
   92 expression: . func_expression
   93           | . '(' expression ')'
   94           | . TOK_NUMBER
   95           | . TOK_STRINGLIT
   96           | . TOK_LINE
   97           | . TOK_VMIP
   98           | . TOK_VMSP
   99           | . TOK_VMSFP
  100           | . lvalue
  101           | . '&' TOK_ID
  102           | . '+' expression
  103           | . expression '+' expression
  104           | . expression '-' expression
  105           | . expression '*' expression
  106           | . expression '/' expression
  107           | . expression '%' expression
  108           | . expression TOK_SHL expression
  109           | . expression TOK_SHR expression
  110           | . expression '&' expression
  111           | . expression '|' expression
  112           | . expression '^' expression
  113           | . expression TOK_LAND expression
  114           | . expression TOK_LOR expression
  115           | . '~' expression
  116           | . '-' expression
  117           | . '!' expression
  118           | . expression '<' expression
  119           | . expression TOK_LE expression
  120           | . expression TOK_EQ expression
  121           | . expression TOK_NE expression
  122           | . expression TOK_GE expression
  123           | . expression '>' expression
  124           | . TOK_INC lvalue
  125           | . TOK_DEC lvalue
  126           | . lvalue TOK_INC
  127           | . lvalue TOK_DEC
  128           | . expression '?' expression ':' expression

    TOK_NUMBER     shift, and go to state 109
    TOK_USERFUNC   shift, and go to state 71
    TOK_ID         shift, and go to state 110
    TOK_STRINGLIT  shift, and go to state 111
    TOK_LINE       shift, and go to state 112
    TOK_VMIP       shift, and go to state 113
    TOK_VMSP       shift, and go to state 114
    TOK_VMSFP      shift, and go to state 115
    TOK_PTR_8U     shift, and go to state 81
    TOK_PTR_8S     shift, and go to state 82
    TOK_PTR_16     shift, and go to state 83
    TOK_PTR_F      shift, and go to state 84
    '&'            shift, and go to state 116
    '+'            shift, and go to state 117
    '-'            shift, and go to state 118
    TOK_INC        shift, and go to state 119
    TOK_DEC        shift, and go to state 120
    ';'            shift, and go to state 121
    '('            shift, and go to state 122
    '~'            shift, and go to state 123
    '!'            shift, and go to state 124

    ptr_type         go to state 91
    lvalue           go to state 125
    func_expression  go to state 126
    expression       go to state 127


State 81

   81 ptr_type: TOK_PTR_8U .

    $default  reduce using rule 81 (ptr_type)


State 82

   82 ptr_type: TOK_PTR_8S .

    $default  reduce using rule 82 (ptr_type)


State 83

   83 ptr_type: TOK_PTR_16 .

    $default  reduce using rule 83 (ptr_type)


State 84

   91 func_expression: TOK_PTR_F . '[' expression ']' '(' func_call_args ')'

    '['  shift, and go to state 128


State 85

   73 core_statement: TOK_INC . lvalue
   81 ptr_type: . TOK_PTR_8U
   82         | . TOK_PTR_8S
   83         | . TOK_PTR_16
   86 lvalue: . TOK_ID
   87       | . TOK_ID '[' expression ']'
   88       | . ptr_type '[' expression ptr_index ']'

    TOK_ID      shift, and go to state 129
    TOK_PTR_8U  shift, and go to state 81
    TOK_PTR_8S  shift, and go to state 82
    TOK_PTR_16  shift, and go to state 83

    ptr_type  go to state 91
    lvalue    go to state 130


State 86
